--- a/package.json
+++ b/package.json
@@ -26,5 +26,13 @@
   "bugs": {
     "url": "https://github.com/m-gilman/mongoscraper/issues"
   },
-  "homepage": "https://github.com/m-gilman/mongoscraper#readme"
+  "homepage": "https://github.com/m-gilman/mongoscraper#readme",
+  "devDependencies": {
+    "body-parser": "^1.18.3",
+    "cheerio": "^1.0.0-rc.2",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "mongoose": "^5.1.4",
+    "request": "^2.87.0"
+  }
 }
