--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mongoscraper",
   "version": "1.0.0",
-  "description": "A Mongo Scraper that scrapes articles from a satirical evangelical Christian website, The Babylon Bee ",
+  "description": "A Mongo Scraper that scrapes articles from a job search website (indeed.com).",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -29,11 +29,13 @@
   },
   "homepage": "https://github.com/m-gilman/mongoscraper#readme",
   "devDependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mongoose": "^5.1.4",
+    "morgan": "^1.9.0",
     "request": "^2.87.0"
   }
 }
