--- a/package.json
+++ b/package.json
@@ -1,40 +1,22 @@
 {
-  "name": "mongoscraper",
+  "name": "mongoose_skeleton",
   "version": "1.0.0",
-  "description": "A Mongo Scraper that scrapes articles from a job search website (indeed.com).",
+  "description": "",
   "main": "server.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "nodemon server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/m-gilman/mongoscraper.git"
-  },
-  "keywords": [
-    "Node/NPM",
-    "Javascript",
-    "jQuery/AJAX",
-    "Mongo/Mongoose",
-    "Handlebars",
-    "Express",
-    "Body-parser",
-    "Request",
-    "Cheerio.js"
-  ],
-  "author": "Melissa Gilman",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/m-gilman/mongoscraper/issues"
-  },
-  "homepage": "https://github.com/m-gilman/mongoscraper#readme",
-  "devDependencies": {
-    "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
+  "dependencies": {
+    "axios": "^0.16.2",
+    "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
-    "express": "^4.16.3",
+    "express": "^4.16.1",
     "express-handlebars": "^3.0.0",
-    "mongoose": "^5.1.4",
+    "mongoose": "^5.0.11",
     "morgan": "^1.9.0",
     "request": "^2.87.0"
   }
